testing overhaul