@@ -7,6 +7,14 @@ plugins {
   id("testing.convention")
 }
 
+tasks.withType<Test> {
+  jvmArgs =
+    listOf(
+      "-XX:+EnableDynamicAgentLoading",
+      "-Djdk.instrument.traceUsage=false",
+    )
+}
+
 dependencies {
   // Core Mosaic dependency
   implementation(project(":mosaic-core"))
@@ -17,9 +25,6 @@ dependencies {
   // Testing dependencies - needed for main source set since this is a testing framework
   implementation(kotlin("test"))
   implementation(libs.kotlinx.coroutines.test)
-  implementation(libs.junit.jupiter)
-  implementation(libs.junit.jupiter.api)
-  implementation(libs.junit.jupiter.engine)
 
   // Mocking and assertion libraries
   implementation(libs.mockk)
